import { sql } from "drizzle-orm";
import {
  index,
  pgEnum,
  pgTable,
  text,
  timestamp,
  uniqueIndex,
  uuid,
  varchar,
} from "drizzle-orm/pg-core";
import { createdAt, timestamps } from "./columns";

export const userRoleEnum = pgEnum("user_role", [
  "learner",
  "instructor",
  "admin",
]);

export const users = pgTable(
  "users",
  {
    id: uuid("id").primaryKey().defaultRandom(),
    email: varchar("email", { length: 255 }).notNull(),
    passwordHash: varchar("password_hash", { length: 255 }).notNull(),
    fullName: varchar("full_name", { length: 255 }),
    avatarKey: varchar("avatar_key", { length: 512 }),
    role: userRoleEnum("role").default("learner").notNull(),
    ...timestamps,
  },
  (table) => ({
    emailUnique: uniqueIndex("users_email_unique").on(table.email),
    roleIdx: index("users_role_idx").on(table.role),
  }),
);

export const refreshTokens = pgTable(
  "refresh_tokens",
  {
    id: uuid("id").primaryKey().defaultRandom(),
    userId: uuid("user_id")
      .references(() => users.id, { onDelete: "cascade" })
      .notNull(),
    tokenHash: varchar("token_hash", { length: 64 }).notNull(),
    jti: varchar("jti", { length: 36 }).notNull(),
    replacedByJti: varchar("replaced_by_jti", { length: 36 }),
    deviceInfo: text("device_info"),
    revokedAt: timestamp("revoked_at", { withTimezone: true, mode: "string" }),
    expiresAt: timestamp("expires_at", {
      withTimezone: true,
      mode: "string",
    }).notNull(),
    createdAt,
  },
  (table) => ({
    tokenHashIdx: index("refresh_tokens_hash_idx").on(table.tokenHash),
    jtiUnique: uniqueIndex("refresh_tokens_jti_unique").on(table.jti),
    userIdIdx: index("refresh_tokens_user_id_idx").on(table.userId),
    expiresAtIdx: index("refresh_tokens_expires_at_idx").on(table.expiresAt),
    activeIdx: index("refresh_tokens_active_idx")
      .on(table.userId)
      .where(sql`${table.revokedAt} IS NULL`),
  }),
);

export type User = typeof users.$inferSelect;
export type NewUser = typeof users.$inferInsert;
export type RefreshToken = typeof refreshTokens.$inferSelect;
export type NewRefreshToken = typeof refreshTokens.$inferInsert;
